# LabNet

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LabNet.sln  README.md
LabNet/: CMakeLists.txt  LabNet.cpp  LabNet.vgdbcmake  LabNetMainActor.cpp  LabNetMainActor.h  LabNetMainActorMessages.h  toolchain.cmake
LabNet/DigitalOut/: DigitalOutHelper.cpp  DigitalOutHelper.h  LoopHelper.cpp  LoopHelper.h  LoopMessages.h  PinId.h  PulseHelper.cpp  PulseHelper.h  digital_out_helper.cpp  digital_out_helper.h  loop_helper.cpp  loop_helper.h  pin_id.h  pulse_helper.cpp  pulse_helper.h
LabNet/Interface/: DigitalMessages.h  InitMessages.h  InterfaceMessages.h  Interfaces.h  ManageInterfaces.cpp  ManageInterfaces.h  StreamMessages.h  digital_messages.h  interfaces.h  manage_interfaces.cpp  manage_interfaces.h
LabNet/Interface/GPIO/: DigitalInput.h  DigitalInputStateReader.cpp  DigitalInputStateReader.h  DigitalOutput.h  GPIOManager.cpp  GPIOManager.h  Messages.h
LabNet/Interface/RFID/: MAX14830.h  MAX14830_defs.h  MAXDevice.cpp  RfidMainActor.cpp  RfidMainActor.h  RfidMessages.h
LabNet/Interface/SAM32/: DataReadWorker.cpp  DataReadWorker.h  MAX14830.cpp  MAXDevice.cpp  MAXDevice.h  SamMainActor.cpp  SamMainActor.h  SamMessages.h  spi.cpp  spi.h
LabNet/Interface/UART/: PrivateMessages.h  SerialPort.cpp  SerialPort.h  SerialPortMessages.h  SerialPortsManager.cpp  SerialPortsManager.h
LabNet/Interface/gpio_wiring/: DigitalInput.h  DigitalInputStateReader.cpp  DigitalInputStateReader.h  DigitalOutput.h  GpioManager.cpp  GpioManager.h  Messages.h  digital_input_state_reader.cpp  digital_input_state_reader.h  gpio_manager.cpp  gpio_manager.h  resource_request_helper.cpp  resource_request_helper.h
LabNet/Interface/io_board/: DigitalInput.h  DigitalInputStateReader.cpp  DigitalInputStateReader.h  DigitalOutput.h  GPIOManager.cpp  GPIOManager.h  Messages.h  board_actor.cpp  board_actor.h  digital_input.h  digital_input_state_reader.cpp  digital_input_state_reader.h  resource_request_helper.cpp  resource_request_helper.h
LabNet/Interface/rfid_board/: DataReadWorker.cpp  DataReadWorker.h  MAX14830.cpp  MAX14830.h  MAXDevice.cpp  MAXDevice.h  RfidMainActor.cpp  RfidMainActor.h  RfidMessages.h  data_read_worker.cpp  data_read_worker.h  max_device.cpp  max_device.h  rfid_main_actor.cpp  rfid_main_actor.h
LabNet/Interface/sound/: SignalGenerator.cpp  SignalGenerator.h  Signals.h  signal_generator.cpp  signal_generator.h
LabNet/Interface/uart/: PrivateMessages.h  SerialPort.cpp  SerialPort.h  SerialPortsManager.cpp  SerialPortsManager.h  digital_input.h  digital_output.h  private_messages.h  serial_port.cpp  serial_port.h  serial_ports_manager.cpp  serial_ports_manager.h
LabNet/Log/: EasyLogger.h  LoggerFactory.h  LoggingFacility.h  StandardOutputLogger.h
LabNet/Network/: Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  LabNet.pb.cc  LabNet.pb.h  LabNet.proto  LabNetClient.pb.cc  LabNetClient.pb.h  LabNetClient.proto  LabNetClientMessages.pb.cc  LabNetClientMessages.pb.h  LabNetClientMessages.proto  LabNetServer.pb.cc  LabNetServer.pb.h  LabNetServer.proto  LabNetServerMessages.pb.cc  LabNetServerMessages.pb.h  LabNetServerMessages.proto  NetworkProxyActor.cpp  NetworkProxyActor.h  ProtocolAll.h  Server.cpp  Server.h
LabNet/digital_out/: digital_out_helper.cpp  digital_out_helper.h  loop_helper.cpp  loop_helper.h  loop_messages.h  pin_id.h  pulse_helper.cpp  pulse_helper.h
LabNet/helper/: reset_helper.cpp  reset_helper.h  reset_msg.h
LabNet/interface/: interface_messages.h  interfaces.h  manage_interfaces.cpp  manage_interfaces.h  stream_messages.h
LabNet/interface/ble_uart/: ble_uart_actor.cpp  ble_uart_actor.h  ble_uart_main.cpp  ble_uart_main.h  connection.cpp  connection.h
LabNet/interface/chi_bio/: chi_bio_main_actor.cpp  chi_bio_main_actor.h
LabNet/interface/gpio_wiring/: digital_input.h  digital_input_state_reader.cpp  digital_input_state_reader.h  digital_output.h  gpio_manager.cpp  gpio_manager.h  resource_request_helper.cpp  resource_request_helper.h
LabNet/interface/io_board/: board_actor.cpp  board_actor.h  digital_input_state_reader.cpp  digital_input_state_reader.h  digital_output.h  resource_request_helper.cpp  resource_request_helper.h
LabNet/interface/rfid_board/: data_read_worker.cpp  data_read_worker.h  max_14830.cpp  max_14830.h  max_14830_defs.h  max_device.cpp  max_device.h  rfid_main_actor.cpp  rfid_main_actor.h  spi.cpp  spi.h
LabNet/interface/sound/: signal_generator.cpp  signal_generator.h  signals.h
LabNet/interface/uart/: serial_port.cpp  serial_port.h  serial_ports_manager.cpp  serial_ports_manager.h
LabNet/interface/uart_board/: data_worker.cpp  data_worker.h  max_uart_board.cpp  max_uart_board.h  uart_board_main_actor.cpp  uart_board_main_actor.h
LabNet/log/: easy_logger.h  logger.conf  logger_factory.h  logging_facility.h  standard_output_logger.h
LabNet/network/: Connection.h  ConnectionManager.h  LabNet.pb.cc  LabNet.pb.h  LabNetClient.pb.cc  LabNetClient.pb.h  LabNetClient.proto  LabNetServer.pb.cc  LabNetServer.pb.h  LabNetServer.proto  Server.cpp  connection.cpp  connection.h  connection_manager.cpp  connection_manager.h  protocol_all.h  server.cpp  server.h  server_actor.cpp  server_actor.h  server_messages.h  shared_buffer.h
LabNet/resources/: resource.cpp  resource.h  resources_actor.cpp  resources_actor.h
examples/cpp/perf_test/: .gitignore  CMakeLists.txt  README.md  client.cpp  client.h  id_test.h  main.cpp  save_latencies.h  set_and_read_dig_out_test.h  set_dig_out_test.h  shared_buffer.h  start_mes.h  stats.cpp  stats.h
examples/cpp/perf_test/prot/: LabNet.pb.cc  LabNet.pb.h  LabNetClient.pb.cc  (+3 more)
examples/cpp/ping_test/: .gitignore  CMakeLists.txt  README.md  client.cpp  id_test.h  main.cpp  save_latencies.h  set_dig_out_test.h  stats.cpp  stats.h
examples/cpp/read_set_test/: CMakeLists.txt  README.md  client.h  main.cpp  read_and_set_test.h  shared_buffer.h  start_mes.h
proto/: CMakeLists.txt  LabNet.proto  LabNetClient.proto  LabNetServer.proto
(+56 files in other folders)
